Adding small icons in top navigation menu for small devices

--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,8 @@ a.lightbox img:hover{
 		display: none !important;
 	}
 }
+@media (min-width: 992.5px) {
+	i.cat-icon{
+		display: none !important;
+	}
+}
