Updated text color

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 body {
 	font-family: 'Nunito';
 	font-size: 1rem;
-	color: #BFBFBF;
+	color: #CFCFCF;
 	background-color: #202428;
 }
 a, a:active{
